--- a/css/landingpage.css
+++ b/css/landingpage.css
@@ -21,7 +21,7 @@ body{
   position:absolute;
   bottom:20%;
   right:22%;
-  font-size:3vh;
+  font-size:2vw;
   text-align:center;
   border:2px solid #D4BEAA;
   border-radius:16px;
@@ -46,7 +46,7 @@ body{
 @media screen and (max-width: 1000px) {
   .button{
     border-radius: 8px;
-    right:20%
+    right:15%;
     width:25%;
   }
 }
