--- a/css/guestartists.css
+++ b/css/guestartists.css
@@ -102,7 +102,7 @@ body{
 }
 .header{
   position:relative;
-  background-image:url("../images/home/background.png");
+  background-image:url("../images/guestartists/background.png");
   padding:10px;
   -webkit-box-shadow: 0px 5px 10px 4px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 5px 10px 4px rgba(0,0,0,0.75);
