--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,10 @@
     font-family: FuturaCondensed;
     src: url("../fonts/FuturaLT-Condensed.ttf");
 }
+@font-face {
+    font-family: FuturaLight;
+    src: url("../fonts/FuturaLT-Light.ttf");
+}
 
 body{
   margin: 0;
@@ -186,7 +190,7 @@ body{
 }
 .pfos-story-container{
   display:inline-block;
-  padding:20px 5vw;
+  width:100%;
 }
 .story{
   font-family:FuturaCondensed;
@@ -201,22 +205,26 @@ body{
   margin: 0;
   padding: 0;
 }
+.story img{
+  width: 100%;
+}
 #psalm-story {
   padding: 0 10%;
 }
 .buttons{
+  font-family:FuturaLight;
   text-align:center;
   margin-top:20px;
   padding:40px;
 }
 .play-icon{
-  display:inline-block;
-  margin-top:10px;
-  width:0;
-  height:0;
-  border-top: 0.75vw solid transparent;
-  border-left: 1.5vw solid white;
-  border-bottom: 0.75vw solid transparent;
+  display: inline-block;
+  margin-top: 0.5vw;
+  width: 0;
+  height: 0;
+  border-top: 0.7vw solid transparent;
+  border-left: 1.2vw solid white;
+  border-bottom: 0.7vw solid transparent;
 }
 .pfos-button.right{
   margin-right:10%;
@@ -228,7 +236,7 @@ body{
 }
 .pfos-button{
   border:4px solid #D4BEAA;
-  border-radius:10px;
+  border-radius:8px;
   width: 35%;
   display:inline-block;
   background-color:#5F4D39;
@@ -236,13 +244,9 @@ body{
   color:#E2EBE2;
   cursor:pointer;
 }
-.pfos-button p{
-  display:inline-block;
-  width:80%;
-  font-size:1.5vw;
-  margin:0;
-  padding:0;
-  line-height:200%;
+.pfos-button img{
+  width:100%;
+  margin-top:3px;
 }
 .pfos-button:hover,
 .pfos-button:focus,
@@ -312,15 +316,14 @@ body{
   .pfos-button{
     border:2px solid #D4BEAA;
     border-radius: 5px;
-    width:35%;
   }
   .pfos-button p{
-    font-size:2.5vw;
+    font-size:2.4vw;
   }
   .play-icon{
-    border-top: 1.25vw solid transparent;
-    border-left: 2.5vw solid white;
-    border-bottom: 1.25vw solid transparent;
+    border-top: 1.2vw solid transparent;
+    border-left: 2.4vw solid white;
+    border-bottom: 1.2vw solid transparent;
   }
   .guest-header{
     font-size:3vw;
