--- a/css/landingpage.css
+++ b/css/landingpage.css
@@ -7,25 +7,28 @@ body{
 .container{
   position:absolute;
   top:0;
+  height:100%;
   width:100%;
   margin:0 auto;
-  max-height:99vh;
   text-align:center;
+  background-image:url("../images/landing/bg-image.png");
+  background-size:contain;
+  background-position:center;
+  background-repeat:no-repeat;
 }
-#background{
-  position:relative;
-  max-width:100%;
-  max-height:99vh;
+.button-container{
+  position:absolute;
+  bottom:30%;
+  right:20%;
+  width:20%;
+  text-align:center;
+  color:#EDC297;
 }
 .button{
-  position:absolute;
-  bottom:20%;
-  right:22%;
-  font-size:2vw;
-  text-align:center;
+  width:100%;
+  font-size:3vh;
   border:2px solid #D4BEAA;
   border-radius:16px;
-  width: 22%;
   display:inline-block;
   background-color:#5F4D39;
   padding:0;
@@ -34,7 +37,7 @@ body{
   cursor:pointer;
 }
 .button p{
-  padding: 0.8vw;
+  padding: 0.8vh;
   margin: 0;
 }
 .button:hover,
@@ -44,9 +47,23 @@ body{
 }
 
 @media screen and (max-width: 1000px) {
+  .container{
+    background-image:url("../images/landing/bg-mobile.png");
+    height:80%;
+    margin-bottom:20%;
+  }
+  .button-container{
+    bottom:10%;
+    right:30%;
+    width:40%;
+  }
   .button{
     border-radius: 8px;
-    right:15%;
-    width:25%;
+    width:100%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .button-container p{
+    font-size:4vw;
   }
 }
